setup gateway for all api